# mixtura

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull-request-template.md
.github/TEMPLATES/pull/: pull_request_template.md
.github/workflows/: compile.yaml  snyk-security.yml  snyk.yaml
docs/: Installation.md
mixtura/: __init__.py  __main__.py  cache.py  cli.py  commands.py  core.py  main.py  manager.py  models.py  parser.py  ui.py  update.py  utils.py
mixtura/controllers/: __init__.py  add.py  base.py  clean.py  list.py  remove.py  search.py  upgrade.py
mixtura/core/: __init__.py  concurrency.py  orchestrator.py  package.py  service.py
mixtura/core/providers/: __init__.py  base.py
mixtura/core/providers/flatpak/: __init__.py  provider.py
mixtura/models/: __init__.py  base.py  manager.py  results.py
mixtura/modules/flatpak/: provider.py
mixtura/modules/homebrew/: provider.py
mixtura/modules/nixpkgs/: provider.py
mixtura/ui/: __init__.py  display.py  prompts.py
mixtura/views/: __init__.py  display.py  logger.py  prompts.py  style.py
src/: commands.py  core.py  main.py  manager.py  utils.py
src/modules/flatpak/: provider.py
src/modules/homebrew/: provider.py
src/modules/nixpkgs/: provider.py
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_cli.py  test_concurrency.py  test_models.py  test_orchestrator.py  test_providers.py  test_service.py  test_ui.py  test_update.py  test_utils.py
(+7 files in other folders)
