[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mixtura"
version = "1.18"
description = "Mixed together. Running everywhere."
authors = [
  { name = "Miguel Batista Pinotti", email = "miguelpinotty@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mixtura = "mixtura.cli:app"
mix = "mixtura.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mixtura*"]
namespaces = false
